--- a/index.html
+++ b/index.html
@@ -1,31 +1,37 @@
 <html>
+
 <head>
     <title>Mini Project 01</title>
 </head>
+
 <body>
     <header>
         <h1>Page Header</h1>
-            <nav>
-                <a href="#">GitHub</a>
-                <a href="#iamges">Images</a>
-                <a href="#contact">Contact</a>
-            </nav>
+        <nav>
+            <a href="https://github.com/ryanpaynt" target="blank">GitHub</a>
+            <a href="#iamges">Images</a>
+            <a href="#contact">Contact</a>
+        </nav>
         <link rel="stylesheet" href="./assets/css/style.css">
     </header>
     <main>
         <section id="images">
             <h2>Images</h2>
-        <figure>
-            <img src="./assets/images/spongebob.png" alt="Spongebob">
-            <figcaption>SpongeBob lives in the sea</figcaption>
-        </figure>
-        <figure>
-            <img src="./assets/images/patrickst.png" alt="Patrick Star">
-            <figcaption>Patrick lives under a rock</figcaption>
-        </figure>
-        <figure>            
-            <img src="./assets/images/krabs.png" alt="Mr. Krabs">
-            <figcaption>Mr. Krabs owns the Krusty Krab</figcaption></figure>
+            <div class="image-items">
+                
+                <figure>
+                    <img src="./assets/images/spongebob.png" alt="Spongebob">
+                    <figcaption>SpongeBob lives in the sea</figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/images/patrickst.png" alt="Patrick Star">
+                    <figcaption>Patrick lives under a rock</figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/images/krabs.png" alt="Mr. Krabs">
+                    <figcaption>Mr. Krabs owns the Krusty Krab</figcaption>
+                </figure>
+            </div>
         </section>
         <section id="contact">
             <h2>Contact</h2>
@@ -33,23 +39,24 @@
         <form action="">
             <label>
                 <span>Name: </span>
-                <input type="text" placeholder="Insert Name" required/>
+                <input type="text" placeholder="Insert Name" required />
             </label>
             <label>
                 <span>Email: </span>
-                <input type="text" placeholder="Insert Email Address" required/>
+                <input type="text" placeholder="Insert Email Address" required />
             </label>
             <button>Send</button>
         </form>
-    </section>
+        </section>
     </main>
     <footer>
+        <p>&copy; 2021 Ryan Paynter</p>
         <nav>
-            <a href="#">GitHub</a>
+            <a href="https://github.com/ryanpaynt" target="blank">GitHub</a>
             <a href="#images">Images</a>
             <a href="#contact">Contact</a>
         </nav>
-        <p>&copy; 2021 Ryan Paynter</p>
     </footer>
 </body>
+
 </html>
